--- a/archives/toutiao-search/2023-11-02.md
+++ b/archives/toutiao-search/2023-11-02.md
@@ -1,52 +1,66 @@
 # 2023-11-02
 
-共 343 条
+共 355 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 02 2023 20:08:34 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 02 2023 21:06:43 GMT+0800 (China Standard Time) -->
 1. [李克强同志生平](https://so.toutiao.com/search?keyword=李克强同志生平)
 1. [李克强同志生平照片](https://so.toutiao.com/search?keyword=李克强同志生平照片)
 1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
 1. [中方回应中缅边境战略城镇失去控制](https://so.toutiao.com/search?keyword=中方回应中缅边境战略城镇失去控制)
-1. [身高1米45命案逃犯已自杀](https://so.toutiao.com/search?keyword=身高1米45命案逃犯已自杀)
-1. [传说500公里的加沙地道长啥样](https://so.toutiao.com/search?keyword=传说500公里的加沙地道长啥样)
+1. [副市长与女同事暧昧？官方核查](https://so.toutiao.com/search?keyword=副市长与女同事暧昧？官方核查)
+1. [6名中国公民在菲律宾遭绑架](https://so.toutiao.com/search?keyword=6名中国公民在菲律宾遭绑架)
 1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
 1. [水庆霞更衣室与球员道别](https://so.toutiao.com/search?keyword=水庆霞更衣室与球员道别)
-1. [6名中国公民在菲律宾遭绑架](https://so.toutiao.com/search?keyword=6名中国公民在菲律宾遭绑架)
+1. [教育局回应学生被后桌夹挤拽头发](https://so.toutiao.com/search?keyword=教育局回应学生被后桌夹挤拽头发)
 1. [重庆辟谣“公租房不摇号直接分房”](https://so.toutiao.com/search?keyword=重庆辟谣“公租房不摇号直接分房”)
 1. [以色列打响地道战就能清除哈马斯吗](https://so.toutiao.com/search?keyword=以色列打响地道战就能清除哈马斯吗)
-1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
-1. [缅甸电诈窝点墙上写着业绩就是尊严](https://so.toutiao.com/search?keyword=缅甸电诈窝点墙上写着业绩就是尊严)
 1. [老教师呼吁学校取消与教育无关任务](https://so.toutiao.com/search?keyword=老教师呼吁学校取消与教育无关任务)
-1. [北大李玲教授：医药反腐只是手段](https://so.toutiao.com/search?keyword=北大李玲教授：医药反腐只是手段)
-1. [命案逃犯搜捕细节：森林发现其尸体](https://so.toutiao.com/search?keyword=命案逃犯搜捕细节：森林发现其尸体)
-1. [女星安吉丽娜·朱莉谴责以色列](https://so.toutiao.com/search?keyword=女星安吉丽娜·朱莉谴责以色列)
-1. [村民抢药材损失谁来负](https://so.toutiao.com/search?keyword=村民抢药材损失谁来负)
 1. [男子涉嫌电信诈骗 446万等人认领](https://so.toutiao.com/search?keyword=男子涉嫌电信诈骗+446万等人认领)
-1. [中方回应日本启动第三批核污水排海](https://so.toutiao.com/search?keyword=中方回应日本启动第三批核污水排海)
-1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
-1. [中美将举行军控和防扩散磋商](https://so.toutiao.com/search?keyword=中美将举行军控和防扩散磋商)
-1. [神十六着陆前和太阳惊艳合影](https://so.toutiao.com/search?keyword=神十六着陆前和太阳惊艳合影)
-1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
-1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
-1. [55辆载有援助物资卡车进入加沙地带](https://so.toutiao.com/search?keyword=55辆载有援助物资卡车进入加沙地带)
-1. [WBG 3-0战胜NRG成功晋级S13四强](https://so.toutiao.com/search?keyword=WBG+3-0战胜NRG成功晋级S13四强)
-1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
-1. [教育局回应学生被后桌夹挤拽头发](https://so.toutiao.com/search?keyword=教育局回应学生被后桌夹挤拽头发)
-1. [日本邀请中亚五国参加G7外长会](https://so.toutiao.com/search?keyword=日本邀请中亚五国参加G7外长会)
-1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
-1. [两部门：稳慎扎实推进人民币国际化](https://so.toutiao.com/search?keyword=两部门：稳慎扎实推进人民币国际化)
-1. [曝江苏一副市长与女同事暧昧](https://so.toutiao.com/search?keyword=曝江苏一副市长与女同事暧昧)
-1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
-1. [侯友宜再喊话柯文哲：一同放下自己](https://so.toutiao.com/search?keyword=侯友宜再喊话柯文哲：一同放下自己)
-1. [香榧大丰收价格跳水 农民发愁难卖](https://so.toutiao.com/search?keyword=香榧大丰收价格跳水+农民发愁难卖)
-1. [黑龙江：2023秸秆还田率达68%以上](https://so.toutiao.com/search?keyword=黑龙江：2023秸秆还田率达68%以上)
-1. [埃及将帮助约7000名外国人撤离加沙](https://so.toutiao.com/search?keyword=埃及将帮助约7000名外国人撤离加沙)
-1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
-1. [法提议国际联盟打击哈马斯 俄回应](https://so.toutiao.com/search?keyword=法提议国际联盟打击哈马斯+俄回应)
+1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
 1. [女足替补球员忘带参赛证延误上场](https://so.toutiao.com/search?keyword=女足替补球员忘带参赛证延误上场)
+1. [医院回应新生儿后脑勺被护士烫伤](https://so.toutiao.com/search?keyword=医院回应新生儿后脑勺被护士烫伤)
+1. [WBG横扫NRG晋级四强](https://so.toutiao.com/search?keyword=WBG横扫NRG晋级四强)
+1. [女星安吉丽娜·朱莉谴责以色列](https://so.toutiao.com/search?keyword=女星安吉丽娜·朱莉谴责以色列)
+1. [缅甸国管委承认已失去3个城镇](https://so.toutiao.com/search?keyword=缅甸国管委承认已失去3个城镇)
+1. [为什么说美国在进行芯片内战](https://so.toutiao.com/search?keyword=为什么说美国在进行芯片内战)
+1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
+1. [打工人吃不起鸡爪了吗](https://so.toutiao.com/search?keyword=打工人吃不起鸡爪了吗)
+1. [香榧大丰收价格跳水 农民发愁难卖](https://so.toutiao.com/search?keyword=香榧大丰收价格跳水+农民发愁难卖)
+1. [中方回应日本启动第三批核污水排海](https://so.toutiao.com/search?keyword=中方回应日本启动第三批核污水排海)
+1. [神十六着陆前和太阳惊艳合影](https://so.toutiao.com/search?keyword=神十六着陆前和太阳惊艳合影)
+1. [村民抢药材损失谁来负](https://so.toutiao.com/search?keyword=村民抢药材损失谁来负)
+1. [身高1米45命案逃犯已自杀](https://so.toutiao.com/search?keyword=身高1米45命案逃犯已自杀)
+1. [侯友宜再喊话柯文哲：一同放下自己](https://so.toutiao.com/search?keyword=侯友宜再喊话柯文哲：一同放下自己)
+1. [北大李玲教授：医药反腐只是手段](https://so.toutiao.com/search?keyword=北大李玲教授：医药反腐只是手段)
+1. [男子被小区闸杆击倒7日后脑出血离世](https://so.toutiao.com/search?keyword=男子被小区闸杆击倒7日后脑出血离世)
+1. [缅甸电诈窝点墙上写着业绩就是尊严](https://so.toutiao.com/search?keyword=缅甸电诈窝点墙上写着业绩就是尊严)
+1. [中美将举行军控和防扩散磋商](https://so.toutiao.com/search?keyword=中美将举行军控和防扩散磋商)
+1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
+1. [医院回应解聘全体员工称将赔偿](https://so.toutiao.com/search?keyword=医院回应解聘全体员工称将赔偿)
+1. [雷军回应小米14系列首销创纪录](https://so.toutiao.com/search?keyword=雷军回应小米14系列首销创纪录)
+1. [中国等28国签署《布莱切利宣言》](https://so.toutiao.com/search?keyword=中国等28国签署《布莱切利宣言》)
+1. [内蒙古高院原院长胡毅峰受审](https://so.toutiao.com/search?keyword=内蒙古高院原院长胡毅峰受审)
+1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
+1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
+1. [命案逃犯搜捕细节：森林发现其尸体](https://so.toutiao.com/search?keyword=命案逃犯搜捕细节：森林发现其尸体)
+1. [法提议国际联盟打击哈马斯 俄回应](https://so.toutiao.com/search?keyword=法提议国际联盟打击哈马斯+俄回应)
+1. [四川一国企员工263套房 居委会回应](https://so.toutiao.com/search?keyword=四川一国企员工263套房+居委会回应)
+1. [埃及将帮助约7000名外国人撤离加沙](https://so.toutiao.com/search?keyword=埃及将帮助约7000名外国人撤离加沙)
+1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
+1. [首届人工智能安全峰会在英国召开](https://so.toutiao.com/search?keyword=首届人工智能安全峰会在英国召开)
+1. [两部门：稳慎扎实推进人民币国际化](https://so.toutiao.com/search?keyword=两部门：稳慎扎实推进人民币国际化)
+1. [也门胡塞武装发布向以发射导弹画面](https://so.toutiao.com/search?keyword=也门胡塞武装发布向以发射导弹画面)
 1. [威少谈哈登加盟](https://so.toutiao.com/search?keyword=威少谈哈登加盟)
 1. [茅台涨价如何影响市场](https://so.toutiao.com/search?keyword=茅台涨价如何影响市场)
+1. [拜登政府敦促国会：援乌不能停](https://so.toutiao.com/search?keyword=拜登政府敦促国会：援乌不能停)
+1. [传说500公里的加沙地道长啥样](https://so.toutiao.com/search?keyword=传说500公里的加沙地道长啥样)
+1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
+1. [55辆载有援助物资卡车进入加沙地带](https://so.toutiao.com/search?keyword=55辆载有援助物资卡车进入加沙地带)
+1. [WBG 3-0战胜NRG成功晋级S13四强](https://so.toutiao.com/search?keyword=WBG+3-0战胜NRG成功晋级S13四强)
+1. [日本邀请中亚五国参加G7外长会](https://so.toutiao.com/search?keyword=日本邀请中亚五国参加G7外长会)
+1. [曝江苏一副市长与女同事暧昧](https://so.toutiao.com/search?keyword=曝江苏一副市长与女同事暧昧)
+1. [黑龙江：2023秸秆还田率达68%以上](https://so.toutiao.com/search?keyword=黑龙江：2023秸秆还田率达68%以上)
 1. [媒体：香港房价跌回7年前](https://so.toutiao.com/search?keyword=媒体：香港房价跌回7年前)
 1. [奥地利一犹太礼堂被人纵火烧毁](https://so.toutiao.com/search?keyword=奥地利一犹太礼堂被人纵火烧毁)
 1. [柯文哲曝“新潮流逼走韩国瑜”](https://so.toutiao.com/search?keyword=柯文哲曝“新潮流逼走韩国瑜”)
@@ -66,7 +80,6 @@
 1. [大学生情侣在学校晚会唱歌官宣分手](https://so.toutiao.com/search?keyword=大学生情侣在学校晚会唱歌官宣分手)
 1. [美媒：拜登劝内塔尼亚胡考虑下台](https://so.toutiao.com/search?keyword=美媒：拜登劝内塔尼亚胡考虑下台)
 1. [全球最大核聚变反应堆成功点火](https://so.toutiao.com/search?keyword=全球最大核聚变反应堆成功点火)
-1. [中国等28国签署《布莱切利宣言》](https://so.toutiao.com/search?keyword=中国等28国签署《布莱切利宣言》)
 1. [农户大葱滞销不要了 村民冒雪拔葱](https://so.toutiao.com/search?keyword=农户大葱滞销不要了+村民冒雪拔葱)
 1. [网友连续3天拍到女孩被前后桌夹击](https://so.toutiao.com/search?keyword=网友连续3天拍到女孩被前后桌夹击)
 1. [嫌犯尚金勇搜捕细节：森林发现尸体](https://so.toutiao.com/search?keyword=嫌犯尚金勇搜捕细节：森林发现尸体)
@@ -107,7 +120,6 @@
 1. [证监会：打击伪私募等非法金融活动](https://so.toutiao.com/search?keyword=证监会：打击伪私募等非法金融活动)
 1. [男子钓鱼遇“街溜子”鱼冲人吐口水](https://so.toutiao.com/search?keyword=男子钓鱼遇“街溜子”鱼冲人吐口水)
 1. [“北大韦神”被解雇？校方辟谣](https://so.toutiao.com/search?keyword=“北大韦神”被解雇？校方辟谣)
-1. [哈马斯发布“地道作战”视频](https://so.toutiao.com/search?keyword=哈马斯发布“地道作战”视频)
 1. [Angelababy、张嘉倪微博账号被禁言](https://so.toutiao.com/search?keyword=Angelababy、张嘉倪微博账号被禁言)
 1. [身高1米45命案在逃嫌疑人已自杀](https://so.toutiao.com/search?keyword=身高1米45命案在逃嫌疑人已自杀)
 1. [男子鞋底藏90万元金条闯关步伐露馅](https://so.toutiao.com/search?keyword=男子鞋底藏90万元金条闯关步伐露馅)
