--- a/archives/toutiao-search/2023-11-02.md
+++ b/archives/toutiao-search/2023-11-02.md
@@ -1,56 +1,67 @@
 # 2023-11-02
 
-共 366 条
+共 375 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 02 2023 22:00:45 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 02 2023 23:01:07 GMT+0800 (China Standard Time) -->
 1. [李克强同志生平](https://so.toutiao.com/search?keyword=李克强同志生平)
 1. [李克强同志生平照片](https://so.toutiao.com/search?keyword=李克强同志生平照片)
 1. [我国应对气候变化取得积极进展](https://so.toutiao.com/search?keyword=我国应对气候变化取得积极进展)
-1. [缅甸内战真是因为电诈问题吗](https://so.toutiao.com/search?keyword=缅甸内战真是因为电诈问题吗)
 1. [6名中国公民在菲律宾遭绑架](https://so.toutiao.com/search?keyword=6名中国公民在菲律宾遭绑架)
-1. [教育局回应学生被后桌夹挤拽头发](https://so.toutiao.com/search?keyword=教育局回应学生被后桌夹挤拽头发)
 1. [央媒：村民抢药材通报淡化违法本质](https://so.toutiao.com/search?keyword=央媒：村民抢药材通报淡化违法本质)
-1. [威少谈哈登加盟](https://so.toutiao.com/search?keyword=威少谈哈登加盟)
-1. [医院回应解聘全体员工称将赔偿](https://so.toutiao.com/search?keyword=医院回应解聘全体员工称将赔偿)
+1. [专访缅甸果敢同盟军发言人：铲除电诈](https://so.toutiao.com/search?keyword=专访缅甸果敢同盟军发言人：铲除电诈)
+1. [教育局回应学生被后桌夹挤拽头发](https://so.toutiao.com/search?keyword=教育局回应学生被后桌夹挤拽头发)
+1. [侯友宜再喊话柯文哲：一同放下自己](https://so.toutiao.com/search?keyword=侯友宜再喊话柯文哲：一同放下自己)
+1. [为什么说美国在进行芯片内战](https://so.toutiao.com/search?keyword=为什么说美国在进行芯片内战)
 1. [重庆辟谣“公租房不摇号直接分房”](https://so.toutiao.com/search?keyword=重庆辟谣“公租房不摇号直接分房”)
 1. [以色列打响地道战就能清除哈马斯吗](https://so.toutiao.com/search?keyword=以色列打响地道战就能清除哈马斯吗)
 1. [牛弹琴：以色列正在付出三重代价](https://so.toutiao.com/search?keyword=牛弹琴：以色列正在付出三重代价)
+1. [缅甸内战真是因为电诈问题吗](https://so.toutiao.com/search?keyword=缅甸内战真是因为电诈问题吗)
+1. [地图显示加沙地带遭严重破坏](https://so.toutiao.com/search?keyword=地图显示加沙地带遭严重破坏)
+1. [法提议国际联盟打击哈马斯 俄回应](https://so.toutiao.com/search?keyword=法提议国际联盟打击哈马斯+俄回应)
 1. [女星安吉丽娜·朱莉谴责以色列](https://so.toutiao.com/search?keyword=女星安吉丽娜·朱莉谴责以色列)
-1. [本轮巴以冲突已造成巴方9193人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已造成巴方9193人死亡)
-1. [为什么说美国在进行芯片内战](https://so.toutiao.com/search?keyword=为什么说美国在进行芯片内战)
-1. [香榧大丰收价格跳水 农民发愁难卖](https://so.toutiao.com/search?keyword=香榧大丰收价格跳水+农民发愁难卖)
-1. [水庆霞更衣室与球员道别](https://so.toutiao.com/search?keyword=水庆霞更衣室与球员道别)
-1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
+1. [医院回应解聘全体员工称将赔偿](https://so.toutiao.com/search?keyword=医院回应解聘全体员工称将赔偿)
 1. [中方回应日本启动第三批核污水排海](https://so.toutiao.com/search?keyword=中方回应日本启动第三批核污水排海)
 1. [医院回应新生儿后脑勺被护士烫伤](https://so.toutiao.com/search?keyword=医院回应新生儿后脑勺被护士烫伤)
+1. [德国副总理：赞扬哈马斯属犯罪行为](https://so.toutiao.com/search?keyword=德国副总理：赞扬哈马斯属犯罪行为)
 1. [天安门下半旗悼念李克强同志](https://so.toutiao.com/search?keyword=天安门下半旗悼念李克强同志)
-1. [富士康辟谣“需补税1800亿”](https://so.toutiao.com/search?keyword=富士康辟谣“需补税1800亿”)
-1. [法提议国际联盟打击哈马斯 俄回应](https://so.toutiao.com/search?keyword=法提议国际联盟打击哈马斯+俄回应)
-1. [男子骑车被闸杆击倒7日后离世](https://so.toutiao.com/search?keyword=男子骑车被闸杆击倒7日后离世)
-1. [两部门：稳慎扎实推进人民币国际化](https://so.toutiao.com/search?keyword=两部门：稳慎扎实推进人民币国际化)
-1. [命案逃犯搜捕细节：森林发现其尸体](https://so.toutiao.com/search?keyword=命案逃犯搜捕细节：森林发现其尸体)
-1. [侯友宜再喊话柯文哲：一同放下自己](https://so.toutiao.com/search?keyword=侯友宜再喊话柯文哲：一同放下自己)
-1. [中方回应缅方一边境城镇失去控制](https://so.toutiao.com/search?keyword=中方回应缅方一边境城镇失去控制)
-1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
-1. [身高1米45命案逃犯已自杀](https://so.toutiao.com/search?keyword=身高1米45命案逃犯已自杀)
-1. [中美将举行军控和防扩散磋商](https://so.toutiao.com/search?keyword=中美将举行军控和防扩散磋商)
-1. [日民众集会反对东电启动第三批排海](https://so.toutiao.com/search?keyword=日民众集会反对东电启动第三批排海)
-1. [神十六着陆前和太阳惊艳合影](https://so.toutiao.com/search?keyword=神十六着陆前和太阳惊艳合影)
-1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
-1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
+1. [男子涉嫌电信诈骗 446万等人认领](https://so.toutiao.com/search?keyword=男子涉嫌电信诈骗+446万等人认领)
+1. [本轮巴以冲突已造成巴方9193人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突已造成巴方9193人死亡)
 1. [也门胡塞武装发布向以发射导弹画面](https://so.toutiao.com/search?keyword=也门胡塞武装发布向以发射导弹画面)
-1. [地图显示加沙地带遭严重破坏](https://so.toutiao.com/search?keyword=地图显示加沙地带遭严重破坏)
-1. [埃及将帮助约7000名外国人撤离加沙](https://so.toutiao.com/search?keyword=埃及将帮助约7000名外国人撤离加沙)
-1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
-1. [缅甸国管委承认已失去3个城镇](https://so.toutiao.com/search?keyword=缅甸国管委承认已失去3个城镇)
+1. [男子骑车被闸杆击倒7日后离世](https://so.toutiao.com/search?keyword=男子骑车被闸杆击倒7日后离世)
+1. [威少谈哈登加盟](https://so.toutiao.com/search?keyword=威少谈哈登加盟)
+1. [命案逃犯搜捕细节：森林发现其尸体](https://so.toutiao.com/search?keyword=命案逃犯搜捕细节：森林发现其尸体)
+1. [日民众集会反对第三批核污水排海](https://so.toutiao.com/search?keyword=日民众集会反对第三批核污水排海)
+1. [神十六着陆前和太阳惊艳合影](https://so.toutiao.com/search?keyword=神十六着陆前和太阳惊艳合影)
+1. [茅台涨价如何影响市场](https://so.toutiao.com/search?keyword=茅台涨价如何影响市场)
+1. [伊朗呼吁停止向以色列出口石油食品](https://so.toutiao.com/search?keyword=伊朗呼吁停止向以色列出口石油食品)
+1. [水庆霞更衣室与球员道别](https://so.toutiao.com/search?keyword=水庆霞更衣室与球员道别)
+1. [中方回应缅方一边境城镇失去控制](https://so.toutiao.com/search?keyword=中方回应缅方一边境城镇失去控制)
+1. [曝男子进城卖菜没手续禁售后免费送](https://so.toutiao.com/search?keyword=曝男子进城卖菜没手续禁售后免费送)
+1. [康师傅回应饮品涨价](https://so.toutiao.com/search?keyword=康师傅回应饮品涨价)
+1. [缅北军方3个据点再遭武装攻占](https://so.toutiao.com/search?keyword=缅北军方3个据点再遭武装攻占)
 1. [55辆载有援助物资卡车进入加沙地带](https://so.toutiao.com/search?keyword=55辆载有援助物资卡车进入加沙地带)
+1. [二次断交以色列的玻利维亚是怎样国家](https://so.toutiao.com/search?keyword=二次断交以色列的玻利维亚是怎样国家)
+1. [缅甸国管委承认已失去3个城镇](https://so.toutiao.com/search?keyword=缅甸国管委承认已失去3个城镇)
+1. [以军称一高级军官在加沙战斗中丧生](https://so.toutiao.com/search?keyword=以军称一高级军官在加沙战斗中丧生)
+1. [青啤小便事件让人细思恐极的是什么](https://so.toutiao.com/search?keyword=青啤小便事件让人细思恐极的是什么)
+1. [以方称一支伊朗民兵抵达黎巴嫩南部](https://so.toutiao.com/search?keyword=以方称一支伊朗民兵抵达黎巴嫩南部)
 1. [外媒：美军或计划进驻加沙](https://so.toutiao.com/search?keyword=外媒：美军或计划进驻加沙)
-1. [以军空袭已导致超3500名儿童死亡](https://so.toutiao.com/search?keyword=以军空袭已导致超3500名儿童死亡)
 1. [危局下联合国为何难联合](https://so.toutiao.com/search?keyword=危局下联合国为何难联合)
+1. [母子深夜捡废品 孩子背麻袋超开心](https://so.toutiao.com/search?keyword=母子深夜捡废品+孩子背麻袋超开心)
+1. [中美将举行军控和防扩散磋商](https://so.toutiao.com/search?keyword=中美将举行军控和防扩散磋商)
+1. [富士康辟谣“需补税1800亿”](https://so.toutiao.com/search?keyword=富士康辟谣“需补税1800亿”)
+1. [比利时利涅王妃回广东梅州省亲](https://so.toutiao.com/search?keyword=比利时利涅王妃回广东梅州省亲)
+1. [专家谈医改：要让医院回归公益本质](https://so.toutiao.com/search?keyword=专家谈医改：要让医院回归公益本质)
+1. [万圣节Cosplay明星大咖算侵权吗](https://so.toutiao.com/search?keyword=万圣节Cosplay明星大咖算侵权吗)
+1. [香榧大丰收价格跳水 农民发愁难卖](https://so.toutiao.com/search?keyword=香榧大丰收价格跳水+农民发愁难卖)
+1. [两部门：稳慎扎实推进人民币国际化](https://so.toutiao.com/search?keyword=两部门：稳慎扎实推进人民币国际化)
+1. [身高1米45命案逃犯已自杀](https://so.toutiao.com/search?keyword=身高1米45命案逃犯已自杀)
+1. [日民众集会反对东电启动第三批排海](https://so.toutiao.com/search?keyword=日民众集会反对东电启动第三批排海)
+1. [埃及将帮助约7000名外国人撤离加沙](https://so.toutiao.com/search?keyword=埃及将帮助约7000名外国人撤离加沙)
+1. [以军空袭已导致超3500名儿童死亡](https://so.toutiao.com/search?keyword=以军空袭已导致超3500名儿童死亡)
 1. [山东近期最高气温破纪录](https://so.toutiao.com/search?keyword=山东近期最高气温破纪录)
 1. [内蒙古高院原院长胡毅峰受审](https://so.toutiao.com/search?keyword=内蒙古高院原院长胡毅峰受审)
-1. [男子涉嫌电信诈骗 446万等人认领](https://so.toutiao.com/search?keyword=男子涉嫌电信诈骗+446万等人认领)
 1. [村民抢药材损失谁来负](https://so.toutiao.com/search?keyword=村民抢药材损失谁来负)
 1. [山东淄博政府副秘书长鹿斌佐被双开](https://so.toutiao.com/search?keyword=山东淄博政府副秘书长鹿斌佐被双开)
 1. [副市长与女同事暧昧？官方核查](https://so.toutiao.com/search?keyword=副市长与女同事暧昧？官方核查)
@@ -67,7 +78,6 @@
 1. [中国等28国签署《布莱切利宣言》](https://so.toutiao.com/search?keyword=中国等28国签署《布莱切利宣言》)
 1. [四川一国企员工263套房 居委会回应](https://so.toutiao.com/search?keyword=四川一国企员工263套房+居委会回应)
 1. [首届人工智能安全峰会在英国召开](https://so.toutiao.com/search?keyword=首届人工智能安全峰会在英国召开)
-1. [茅台涨价如何影响市场](https://so.toutiao.com/search?keyword=茅台涨价如何影响市场)
 1. [拜登政府敦促国会：援乌不能停](https://so.toutiao.com/search?keyword=拜登政府敦促国会：援乌不能停)
 1. [传说500公里的加沙地道长啥样](https://so.toutiao.com/search?keyword=传说500公里的加沙地道长啥样)
 1. [WBG 3-0战胜NRG成功晋级S13四强](https://so.toutiao.com/search?keyword=WBG+3-0战胜NRG成功晋级S13四强)
@@ -106,7 +116,6 @@
 1. [实测捷途旅行者越野表现](https://so.toutiao.com/search?keyword=实测捷途旅行者越野表现)
 1. [主人跳皮筋 狗狗和马儿当工具人](https://so.toutiao.com/search?keyword=主人跳皮筋+狗狗和马儿当工具人)
 1. [男子晒控糖一年身体变化](https://so.toutiao.com/search?keyword=男子晒控糖一年身体变化)
-1. [康师傅回应饮品涨价](https://so.toutiao.com/search?keyword=康师傅回应饮品涨价)
 1. [孩子掉污水井爷爷爸爸搭救双双身亡](https://so.toutiao.com/search?keyword=孩子掉污水井爷爷爸爸搭救双双身亡)
 1. [浙江香榧丰收 男子发愁难卖](https://so.toutiao.com/search?keyword=浙江香榧丰收+男子发愁难卖)
 1. [拜登认为以总理将离任？白宫否认](https://so.toutiao.com/search?keyword=拜登认为以总理将离任？白宫否认)
